Revert virtual refactoring