@@ -542,7 +542,10 @@ public class ZkTestServer {
       }
       Thread parentThread = Thread.currentThread();
       // we don't call super.distribSetUp
-      zooThread = Thread.ofVirtual().name("ZkTestServer Run Thread").unstarted(() -> {
+      zooThread = new Thread("ZkTestServer Run Thread"){
+
+      @Override
+      public void run() {
         ServerConfig config =
                   new ServerConfig() {
 
@@ -566,7 +569,8 @@ public class ZkTestServer {
                 zooError.set(t);
                 parentThread.interrupt();
               }
-      });
+        }
+      };
 
       ObjectReleaseTracker.track(zooThread);
       zooThread.start();
